<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_menu_test"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/aboutBoxText"
        android:textColor="#FFD500"
        android:textSize="25dp"
        android:paddingTop="40dp" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/aboutBoxText1"
        android:textColor="#FFD500"
        android:textSize="20dp"
        android:paddingTop="8dp" />
    
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="35dp"
        android:paddingBottom="30dp"
        android:text="@string/aboutBoxText2"
        android:textColor="#FFD500"
        android:textSize="15dp"
        android:autoLink="web"
        android:linksClickable="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/about_box"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/exitMenu" />
        
    </LinearLayout>

</LinearLayout>