<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/image_menu_test">
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        
        <TextView
        android:id="@+id/numberQuestion"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numberTest"
        android:textColor="#FFD500"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textQuestion"
        android:gravity="center"
        android:textSize="20dp"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:paddingTop="80dp"
        android:text="@string/textQuestion"
        android:textColor="#FFD500" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp" >
            
            <TableRow>
                
             <Button
                android:id="@+id/falseButtonA"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/falseButton" />
             
             <TextView
                 android:layout_width="5dp"
                 android:layout_height="30dp"/>

            <Button
                android:id="@+id/falseButtonB"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/falseButton" />
                
              </TableRow>
              
            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="5dp"/>
              
            <TableRow>
                
             <Button
                android:id="@+id/falseButtonC"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/trueButton" />
             
             <TextView
                 android:layout_width="5dp"
                 android:layout_height="30dp"/>

            <Button
                android:id="@+id/falseButtonD"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/falseButton" />
                
              </TableRow>

           
            
        </TableLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="30dp">
            
            <Button
            android:id="@+id/exitButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/exitButton" />
           
        </LinearLayout>
        

               
    </LinearLayout>
    

</LinearLayout>
