<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_menu_test"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="my.app.entest.controller.EntestController">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:background="@drawable/image_entest"
            android:gravity="center"
            android:paddingTop="50dp"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:background="@drawable/image_entest_2"
            android:gravity="center"
            android:paddingTop="50dp"
            android:layout_gravity="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="60dp">

        <Button
            android:id="@+id/start"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/start" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:gravity="center" />

        <Button
            android:id="@+id/about"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/about" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:gravity="center" />

        <Button
            android:id="@+id/exit"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/exit" />

    </LinearLayout>

</LinearLayout>
